<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>edu.kit.kastel.informalin</groupId>
        <artifactId>parent</artifactId>
        <version>0.4-SNAPSHOT</version>
    </parent>

    <groupId>edu.kit.kastel.lissa</groupId>
    <artifactId>approach</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Linking Sketches and Software Architecture (LiSSA)</name>
    <url>https://github.com/LiSSA-Approach/LiSSA-Core</url>
    <modules>
        <module>cli</module>
        <module>linking</module>
        <module>sketches</module>
        <module>swa</module>
        <module>utils</module>
    </modules>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/LiSSA-Approach/LiSSA-Core/issues</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>github-lissa</id>
            <name>GitHub Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/LiSSA-Approach/LiSSA-Core</url>
        </repository>
        <snapshotRepository>
            <id>github-lissa</id>
            <name>GitHub Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/LiSSA-Approach/LiSSA-Core</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <revision>0.2-SNAPSHOT</revision>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <kotlin.code.style>official</kotlin.code.style>
        <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <kotlin.version>1.6.20</kotlin.version>
        <jackson.version>2.13.2</jackson.version>
        <sonar.projectKey>LiSSA-Approach_LiSSA-Core</sonar.projectKey>
        <sonar.organization>lissa-approach</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>linking</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>sketches</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>sketches.coco</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>sketches.model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>swa.pcm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>utils</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.module</groupId>
                <artifactId>jackson-module-kotlin</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.22.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit5</artifactId>
            <version>${kotlin.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>mavenCentral</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>github</id>
            <name>GitHub Apache Maven Packages InFormALin</name>
            <url>https://maven.pkg.github.com/InFormALin/maven-parent</url>
        </repository>
        <repository>
            <id>github-lissa</id>
            <name>GitHub Apache Maven Packages LiSSA</name>
            <url>https://maven.pkg.github.com/LiSSA-Approach/LiSSA-Core</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <pom>
                        <sortPom>
                            <encoding>UTF-8</encoding>
                            <keepBlankLines>true</keepBlankLines>
                            <indentBlankLines>false</indentBlankLines>
                            <nrOfIndentSpace>4</nrOfIndentSpace>
                            <expandEmptyElements>false</expandEmptyElements>
                            <sortModules>true</sortModules>
                            <sortPlugins>groupId,artifactId</sortPlugins>
                            <sortDependencies>groupId,artifactId</sortDependencies>
                        </sortPom>
                    </pom>
                </configuration>
                <executions>
                    <execution>
                        <id>spotless:apply</id>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                        <phase>clean</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.0.0</version>
                <dependencies>
                    <dependency>
                        <groupId>com.pinterest</groupId>
                        <artifactId>ktlint</artifactId>
                        <version>0.45.2</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>ktlint</id>
                        <configuration>
                            <target name="ktlint">
                                <java classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath" dir="${basedir}" failonerror="true" fork="true" taskname="ktlint">
                                    <arg value="src/**/*.kt"/>
                                </java>
                            </target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>ktlint-format</id>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <phase>clean</phase>
                        <configuration>
                            <target name="ktlint">
                                <java classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath" dir="${basedir}" failonerror="true" fork="true" taskname="ktlint">
                                    <arg value="-F"/>
                                    <arg value="src/**/*.kt"/>
                                    <jvmarg value="--add-opens"/>
                                    <jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
                                </java>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                        <phase>test-compile</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <sourceDirectory>src/main/kotlin</sourceDirectory>
        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
    </build>
</project>
